# monitorcontroller

./: CMakeLists.txt  README.md  caffeine.cpp  caffeine.h  main.cpp  monitorcontroller.cpp  monitorcontroller.h  trayicon.cpp  trayicon.h
